--- a/46_APIWithTokenHomework/Base.lproj/Main.storyboard
+++ b/46_APIWithTokenHomework/Base.lproj/Main.storyboard
@@ -258,13 +258,11 @@
                             <barButtonItem systemItem="play" id="cDs-qP-LYs">
                                 <connections>
                                     <action selector="actionVideoButtonPressed:" destination="hCH-qc-UiJ" id="cUL-Z9-Raq"/>
-                                    <segue destination="iyz-LC-8W4" kind="show" id="r3l-VW-2rS"/>
                                 </connections>
                             </barButtonItem>
                             <barButtonItem systemItem="camera" id="xxs-Yc-7rf">
                                 <connections>
                                     <action selector="actionCameraButtonPressed:" destination="hCH-qc-UiJ" id="WeI-fF-zXN"/>
-                                    <segue destination="keJ-lT-SEL" kind="show" id="9Ng-f7-jBK"/>
                                 </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
@@ -275,7 +273,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5bp-Qw-byE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-424" y="96"/>
+            <point key="canvasLocation" x="-272" y="96"/>
         </scene>
         <!--Post Comments View Controller-->
         <scene sceneID="ews-9W-nd8">
@@ -796,14 +794,17 @@
                             <constraint firstItem="IwO-l8-RFF" firstAttribute="top" secondItem="3Fg-Zb-oWq" secondAttribute="bottom" id="w5B-2E-lIo"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="hBU-xO-LEx"/>
+                    <navigationItem key="navigationItem" id="hBU-xO-LEx">
+                        <barButtonItem key="leftBarButtonItem" image="menu-icon" id="u75-Mf-Rn4"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="3Fg-Zb-oWq" id="kaO-dY-O3m"/>
+                        <outlet property="menuRevealBarButton" destination="u75-Mf-Rn4" id="cqH-is-DKl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9bj-zT-T3H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-902" y="1174"/>
+            <point key="canvasLocation" x="-194" y="970"/>
         </scene>
         <!--Adding Post-->
         <scene sceneID="Nmw-No-GIP">
@@ -1032,7 +1033,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PTd-DC-81n" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1192" y="-1474"/>
+            <point key="canvasLocation" x="460" y="-1494"/>
         </scene>
         <!--Side Bar View Controller-->
         <scene sceneID="HvV-Cw-5lJ">
@@ -1109,7 +1110,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="keJ-lT-SEL" kind="custom" identifier="showPhotoAlbumsSegue" customClass="SWRevealViewControllerSeguePushController" id="D9G-cU-yWY"/>
+                                    <segue destination="RYy-yc-myO" kind="custom" identifier="showPhotoAlbumsSegue" customClass="SWRevealViewControllerSeguePushController" id="D9G-cU-yWY"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="videoAlbumsCell" id="RIY-hq-NZW">
@@ -1133,7 +1134,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="iyz-LC-8W4" kind="custom" identifier="showVideoAlbumsSegue" customClass="SWRevealViewControllerSeguePushController" id="Vim-jC-Vsh"/>
+                                    <segue destination="BaU-XI-Bzd" kind="custom" identifier="showVideoAlbumsSegue" customClass="SWRevealViewControllerSeguePushController" id="lzr-7n-AHf"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -1145,7 +1146,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qhd-Y6-VFt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2020" y="341"/>
+            <point key="canvasLocation" x="-1736" y="61"/>
         </scene>
         <!--Video Albums Coll View Contr-->
         <scene sceneID="Gpg-0I-4AT">
@@ -1238,10 +1239,16 @@
                             <outlet property="delegate" destination="iyz-LC-8W4" id="Axm-mS-lRo"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" id="FkQ-IO-OIC">
+                        <barButtonItem key="leftBarButtonItem" image="menu-icon" id="T7m-Je-MKD"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="menuRevealBarButton" destination="T7m-Je-MKD" id="mN6-ah-a6k"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PK5-2B-Qrt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="460" y="-1474"/>
+            <point key="canvasLocation" x="-272" y="-1494"/>
         </scene>
         <!--Video Player View Controller-->
         <scene sceneID="Mls-1C-bM7">
@@ -1376,7 +1383,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oaY-Vj-pvu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2746" y="-1474"/>
+            <point key="canvasLocation" x="2014" y="-1494"/>
         </scene>
         <!--Messages View Controller-->
         <scene sceneID="qIM-RU-eLU">
@@ -1585,7 +1592,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vks-3G-Si1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1258" y="-675"/>
+            <point key="canvasLocation" x="520" y="-667"/>
         </scene>
         <!--Reveal View Controller-->
         <scene sceneID="J2S-T3-sQk">
@@ -1598,7 +1605,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="50d-lQ-Pi4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1912" y="-574"/>
+            <point key="canvasLocation" x="-2168" y="-786"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MSa-Qm-GZ5">
@@ -1620,7 +1627,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tAE-G7-msG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1100" y="96"/>
+            <point key="canvasLocation" x="-984" y="96"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="sbV-Vn-taa">
@@ -1642,7 +1649,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="awR-35-PnK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="466" y="-675"/>
+            <point key="canvasLocation" x="-272" y="-667"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9Qz-GM-KZ2">
@@ -1754,7 +1761,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SrR-nf-09t" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-140" y="1174"/>
+            <point key="canvasLocation" x="568" y="970"/>
         </scene>
         <!--Add photos to album-->
         <scene sceneID="9Lb-2T-X0j">
@@ -1869,7 +1876,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="isc-ty-u4p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="581" y="1174"/>
+            <point key="canvasLocation" x="1289" y="970"/>
         </scene>
         <!--Photo Details View Controller-->
         <scene sceneID="r4g-Kg-IpT">
@@ -1974,7 +1981,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iXA-BB-Tvf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-140" y="1862"/>
+            <point key="canvasLocation" x="568" y="1673"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="sLK-h4-Vqx">
@@ -1993,7 +2000,55 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0cA-Al-9C0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1954" y="-1474"/>
+            <point key="canvasLocation" x="1222" y="-1494"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="XW8-3g-VW4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BaU-XI-Bzd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="be8-uL-CdP">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.385073059" green="0.5745729745" blue="0.82465277780000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="iyz-LC-8W4" kind="relationship" relationship="rootViewController" id="c3k-IB-eWb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="48S-7w-lhd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-984" y="-1494"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="WvT-In-zbV">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RYy-yc-myO" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jqN-y2-9cp">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.385073059" green="0.5745729745" blue="0.82465277780000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="keJ-lT-SEL" kind="relationship" relationship="rootViewController" id="h0p-WQ-Kmb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6VQ-mb-tZe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-984" y="970"/>
         </scene>
     </scenes>
     <resources>
@@ -2004,8 +2059,6 @@
         <image name="thumb-up_16" width="16" height="16"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="fGH-Qz-Ixn"/>
-        <segue reference="9Ng-f7-jBK"/>
-        <segue reference="r3l-VW-2rS"/>
+        <segue reference="Mqh-9M-QQI"/>
     </inferredMetricsTieBreakers>
 </document>
