Authorization process moved from main ViewController to dedicated Authorization VC

--- a/46_APIWithTokenHomework/Base.lproj/LaunchScreen.storyboard
+++ b/46_APIWithTokenHomework/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launchimage" translatesAutoresizingMaskIntoConstraints="NO" id="aC5-9N-h3A">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launchimage" translatesAutoresizingMaskIntoConstraints="NO" id="aC5-9N-h3A">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
